tests/ui/typeck/constants/constant_in_struct.sol
// Constant not allowed in struct fields
contract C {
    struct S {
        uint constant x; //~ ERROR: mutability is not allowed here
    }
}
